Bug 157952 - Content Control layout: dropdown indicator does not disappear moving from combobox to text control
Summary: Content Control layout: dropdown indicator does not disappear moving from com...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium trivial
Assignee: Justin L
URL:
Whiteboard: target:25.2.0
Keywords: implementationError, notBibisectable
Depends on:
Blocks: Form-Controls
  Show dependency treegraph
 
Reported: 2023-10-27 18:45 UTC by Justin L
Modified: 2024-07-24 18:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
SDT-showingDropdownArrow.docx: reverse-tab and see the hanging dropdown (12.81 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-10-27 18:45 UTC, Justin L
Details
SDT-showingDropdownArrow.docx: reverse-tab and see the hanging dropdown (13.06 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-10-27 18:58 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2023-10-27 18:45:01 UTC
Created attachment 190456 [details]
SDT-showingDropdownArrow.docx: reverse-tab and see the hanging dropdown

Steps to reproduce with SDT-showingDropdownArrow.docx
-press shift-tab to switch to the last control (the date control)
-press shift-tab again - moving to plaintext. (down arrow on date control still)
-press shift-tab again - moving to dropdown (down arrow moved to dropdown)
-press shift-tab again - moving to rich text (down arrow on dropdown still)

The down arrow disappears when moving the cursor anywhere OTHER THAN another content control (can also be seen with checkboxes for example).

Probably an implementation error. Date content controls already exist in 7.0, but other content controls (like the easy to reproduce with text controls) don't show up until around 7.4 - where the implementation error can finally be noticed.
Comment 1 Justin L 2023-10-27 18:58:23 UTC
Created attachment 190457 [details]
SDT-showingDropdownArrow.docx: reverse-tab and see the hanging dropdown
Comment 2 Buovjaga 2023-11-02 18:43:47 UTC
Reproduced with document.

Arch Linux 64-bit, X11
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6abe70d181e764c962a9c5e85e826247650bab3a
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 1 November 2023
Comment 3 Justin L 2023-11-02 18:55:26 UTC
It is not a DOCX specific bug, just a DOCX provided example.
Comment 4 Commit Notification 2024-07-24 18:01:57 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/926372b8de7f283c5fd890c23b6d0755ff6bed87

tdf#157952 sw content controls, drop-down: remove when obsolete

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.