tdf#157952 sw content controls, drop-down: remove when obsolete

One place that was missed was when moving from one content control
to another (for example, using the tab key).

Change-Id: I62a3af2a5a7036aaac605d592c244a58f5b65a12
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170967
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins